testdata/zkc/invalid/type_invalid_03.zkc
;;error:4:3-8:bit overflow (u2 into u1)
type bool = u1
fn f(x:bool) -> (r:bool) {
  r = 2
  return
}